# ChatterBox

./: .editorconfig  .gitignore  Cargo.toml  README.md  sqlx-data.json
src/: db.rs  main.rs  names.rs
src/routes/: ws.rs
