[package]
name = "chatterbox"
version = "0.1.0"
edition = "2021"

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1

[profile.dev.package.sqlx-macros]
opt-level = 3

[dependencies]
axum = { version = "0.6.12", features = [
  "headers",
  "http2",
  "json",
  "tokio",
  "ws",
] }
axum-client-ip = "0.4.0"
dotenvy = "0.15.7"
futures = "0.3.28"
rand = "0.8.5"
serde = { version = "1.0.159", features = ["derive"] }
sqlx = { version = "0.6.3", features = [
  "runtime-tokio-native-tls",
  "sqlite",
  "macros",
  "time",
] }
time = "0.3.20"
tokio = { version = "1.27.0", features = ["full"] }
